name:                control-groups
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/control-groups#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable control-groups
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Parsers
                     , CGroups
                     , Tasks
                     , PlaceTask
                     , Invalid
  default-language:    Haskell2010
  build-depends:       base
                     , fastcgi
                     , containers
                     , split
  ghc-options:       -Wall
